Updates navigation styling with background color and fixes to top of page (stretch task)

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -78,15 +78,26 @@ body {
 }
 
 /****** NAVIGATION STYLES ******/
+header {
+	background: #0181ED;
+	width: 100%;
+	padding: 16px 265px;
+	position: fixed;
+}
+
 nav {
+	background: #0181ED;
 }
 
 nav a {
 	display: inline-block;
 	text-decoration: none;
-	color: #B0B1B2;
+	color: #FFF;
 	font-size: .9em;
-	padding-right: 56px;
+	font-weight: bolder;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	padding-right: 48px;
 }
 
 nav img {
@@ -96,7 +107,7 @@ nav img {
 
 /****** TITLE BANNER STYLES ******/ 
 .banner {
-	padding: 72px 0;
+	padding: 100px 0 72px;
 	border-bottom: 1px solid #000;
 }
 
